human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_24.wast
(assert_invalid
  (module (func $type-unary-num-vs-void-after-return
    (return) (block (drop (i32.eqz (nop))))
  ))
  "type mismatch"
)